Commit du nouveau site (temporaire)

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
                          src="img/illustrations/illustration_card/maptyapp.png">
                 </div>
                 <div class="card--body">
-                    <h2 class="card--body__title">MaptyApp</h2>
-                    <p class="card--body__description">Application permettant d'ajouter des points sur une carte
-                        JavaScript</p>
+                    <div class="card--body__entete">
+                        <h2 class="card--body__title">MaptyApp</h2>
+                        <p class="card--body__description">Application permettant d'ajouter des points sur une carte
+                            JavaScript</p>
+                    </div>
                     <div class="card--body__container">
                         <a class="card--body__btn github"
                            href="https://github.com/LucasMadranges/MaptyApp">
@@ -46,7 +48,7 @@
                             GitHub
                         </a>
                         <a class="card--body__btn"
-                           href="pages/MaptyApp/index.html">
+                           href="pages/MaptyApp">
                             Lien
                             <ion-icon class="link-outline"
                                       name="link-outline"></ion-icon>
@@ -60,9 +62,10 @@
                          src="img/illustrations/illustration_card/bankistweb.png">
                 </div>
                 <div class="card--body">
-                    <h2 class="card--body__title">BankistWeb</h2>
-                    <p class="card--body__description">Application permettant d'ajouter des points sur une carte
-                        JavaScript</p>
+                    <div class="card--body__entete">
+                        <h2 class="card--body__title">BankistWeb</h2>
+                        <p class="card--body__description">Site web de présentation d'une banque fictive</p>
+                    </div>
                     <div class="card--body__container">
                         <a class="card--body__btn github"
                            href="https://github.com/LucasMadranges/BankistWeb">
@@ -71,7 +74,7 @@
                             GitHub
                         </a>
                         <a class="card--body__btn"
-                           href="pages/BankistWeb/index.html">
+                           href="pages/BankistWeb">
                             Lien
                             <ion-icon class="link-outline"
                                       name="link-outline"></ion-icon>
@@ -85,9 +88,10 @@
                          src="img/illustrations/illustration_card/piggame.png">
                 </div>
                 <div class="card--body">
-                    <h2 class="card--body__title">PigGame</h2>
-                    <p class="card--body__description">Application permettant d'ajouter des points sur une carte
-                        JavaScript</p>
+                    <div class="card--body__entete">
+                        <h2 class="card--body__title">PigGame</h2>
+                        <p class="card--body__description">Petit jeu du PigGame pour deux joueurs</p>
+                    </div>
                     <div class="card--body__container">
                         <a class="card--body__btn github"
                            href="https://github.com/LucasMadranges/PigGame">
@@ -96,7 +100,33 @@
                             GitHub
                         </a>
                         <a class="card--body__btn"
-                           href="pages/PigGame/index.html">
+                           href="pages/PigGame">
+                            Lien
+                            <ion-icon class="link-outline"
+                                      name="link-outline"></ion-icon>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card--entete">
+                    <img class="img-fluid card--entete__img"
+                         src="img/illustrations/illustration_card/bankistapp.png">
+                </div>
+                <div class="card--body">
+                    <div class="card--body__entete">
+                        <h2 class="card--body__title">BankistApp</h2>
+                        <p class="card--body__description">Application de simulation d'un compte bancaire</p>
+                    </div>
+                    <div class="card--body__container">
+                        <a class="card--body__btn github"
+                           href="https://github.com/LucasMadranges/BankistApp">
+                            <ion-icon class="icon-github"
+                                      name="logo-github"></ion-icon>
+                            GitHub
+                        </a>
+                        <a class="card--body__btn"
+                           href="pages/BankistApp">
                             Lien
                             <ion-icon class="link-outline"
                                       name="link-outline"></ion-icon>
