--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Mes Projets | Lucas Madranges</title>
-        <link href="style.css"
+        <link href="style/style.css"
               rel="stylesheet">
         <script defer
                 src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
