Delete tailwind (for a futur use)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 nomodule
                 src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </head>
-    <body>
+    <body class="">
         <header>
             <img class="img-lucas"
                  src="img/illustrations/img_lucas.webp">
@@ -28,7 +28,7 @@
                 </a>
             </div>
         </header>
-        <section class="section--project container">
+        <section class="container">
             <div class="card">
                 <div class="card--entete">
                     <img class="img-fluid card--entete__img"
@@ -115,7 +115,7 @@
                 </div>
                 <div class="card--body">
                     <div class="card--body__entete">
-                        <h2 class="card--body__title">BankistApp</h2>
+                        <h2 class="card--body__title text-xl font-bold underline">BankistApp</h2>
                         <p class="card--body__description">Application de simulation d'un compte bancaire</p>
                     </div>
                     <div class="card--body__container">
