Ajout des projets Omnifood, trillo et natours

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             GitHub
                         </a>
                         <a class="card--body__btn"
-                           href="pages/MaptyApp">
+                           href="projets/MaptyApp">
                             Lien
                             <ion-icon class="link-outline"
                                       name="link-outline"></ion-icon>
@@ -74,7 +74,7 @@
                             GitHub
                         </a>
                         <a class="card--body__btn"
-                           href="pages/BankistWeb">
+                           href="projets/BankistWeb">
                             Lien
                             <ion-icon class="link-outline"
                                       name="link-outline"></ion-icon>
@@ -100,7 +100,7 @@
                             GitHub
                         </a>
                         <a class="card--body__btn"
-                           href="pages/PigGame">
+                           href="projets/PigGame">
                             Lien
                             <ion-icon class="link-outline"
                                       name="link-outline"></ion-icon>
@@ -126,7 +126,85 @@
                             GitHub
                         </a>
                         <a class="card--body__btn"
-                           href="pages/BankistApp">
+                           href="projets/BankistApp">
+                            Lien
+                            <ion-icon class="link-outline"
+                                      name="link-outline"></ion-icon>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card--entete">
+                    <img class="img-fluid card--entete__img"
+                         src="img/illustrations/illustration_card/bankistapp.png">
+                </div>
+                <div class="card--body">
+                    <div class="card--body__entete">
+                        <h2 class="card--body__title text-xl font-bold underline">Natours</h2>
+                        <p class="card--body__description">Site web de nature</p>
+                    </div>
+                    <div class="card--body__container">
+                        <a class="card--body__btn github"
+                           href="https://github.com/LucasMadranges/Natours_project">
+                            <ion-icon class="icon-github"
+                                      name="logo-github"></ion-icon>
+                            GitHub
+                        </a>
+                        <a class="card--body__btn"
+                           href="projets/Natours_project">
+                            Lien
+                            <ion-icon class="link-outline"
+                                      name="link-outline"></ion-icon>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card--entete">
+                    <img class="img-fluid card--entete__img"
+                         src="img/illustrations/illustration_card/bankistapp.png">
+                </div>
+                <div class="card--body">
+                    <div class="card--body__entete">
+                        <h2 class="card--body__title text-xl font-bold underline">Omnifood</h2>
+                        <p class="card--body__description">Site web vitrine de livraison de repas</p>
+                    </div>
+                    <div class="card--body__container">
+                        <a class="card--body__btn github"
+                           href="https://github.com/LucasMadranges/Omnifood_project">
+                            <ion-icon class="icon-github"
+                                      name="logo-github"></ion-icon>
+                            GitHub
+                        </a>
+                        <a class="card--body__btn"
+                           href="projets/Omnifood_project">
+                            Lien
+                            <ion-icon class="link-outline"
+                                      name="link-outline"></ion-icon>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card--entete">
+                    <img class="img-fluid card--entete__img"
+                         src="img/illustrations/illustration_card/bankistapp.png">
+                </div>
+                <div class="card--body">
+                    <div class="card--body__entete">
+                        <h2 class="card--body__title text-xl font-bold underline">Trillo</h2>
+                        <p class="card--body__description">Site web vitrine de livraison de repas</p>
+                    </div>
+                    <div class="card--body__container">
+                        <a class="card--body__btn github"
+                           href="https://github.com/LucasMadranges/Trillo_project">
+                            <ion-icon class="icon-github"
+                                      name="logo-github"></ion-icon>
+                            GitHub
+                        </a>
+                        <a class="card--body__btn"
+                           href="projets/Trillo_project">
                             Lien
                             <ion-icon class="link-outline"
                                       name="link-outline"></ion-icon>
