--- a/index.html
+++ b/index.html
@@ -141,6 +141,32 @@
                 </div>
                 <div class="card--body">
                     <div class="card--body__entete">
+                        <h2 class="card--body__title text-xl font-bold underline">GuessMyNumber</h2>
+                        <p class="card--body__description">Petit jeu "Trouve le nombre"</p>
+                    </div>
+                    <div class="card--body__container">
+                        <a class="card--body__btn github"
+                           href="https://github.com/LucasMadranges/GuessMyNumber">
+                            <ion-icon class="icon-github"
+                                      name="logo-github"></ion-icon>
+                            GitHub
+                        </a>
+                        <a class="card--body__btn"
+                           href="projets/GuessMyNumber">
+                            Lien
+                            <ion-icon class="link-outline"
+                                      name="link-outline"></ion-icon>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card--entete">
+                    <img class="img-fluid card--entete__img"
+                         src="img/illustrations/illustration_card/bankistapp.png">
+                </div>
+                <div class="card--body">
+                    <div class="card--body__entete">
                         <h2 class="card--body__title text-xl font-bold underline">Natours</h2>
                         <p class="card--body__description">Site web de nature</p>
                     </div>
