adding images for the 4 new projects

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="card">
                 <div class="card--entete">
                     <img class="img-fluid card--entete__img"
-                         src="img/illustrations/illustration_card/bankistapp.png">
+                         src="img/illustrations/illustration_card/guessmynumber.png.png">
                 </div>
                 <div class="card--body">
                     <div class="card--body__entete">
@@ -163,7 +163,7 @@
             <div class="card">
                 <div class="card--entete">
                     <img class="img-fluid card--entete__img"
-                         src="img/illustrations/illustration_card/bankistapp.png">
+                         src="img/illustrations/illustration_card/natours.png.png">
                 </div>
                 <div class="card--body">
                     <div class="card--body__entete">
@@ -189,7 +189,7 @@
             <div class="card">
                 <div class="card--entete">
                     <img class="img-fluid card--entete__img"
-                         src="img/illustrations/illustration_card/bankistapp.png">
+                         src="img/illustrations/illustration_card/omnifood.png.png">
                 </div>
                 <div class="card--body">
                     <div class="card--body__entete">
@@ -215,7 +215,7 @@
             <div class="card">
                 <div class="card--entete">
                     <img class="img-fluid card--entete__img"
-                         src="img/illustrations/illustration_card/bankistapp.png">
+                         src="img/illustrations/illustration_card/trillo.png.png">
                 </div>
                 <div class="card--body">
                     <div class="card--body__entete">
